// ========================================
// ERD - Sistem Peminjaman Sarpras
// Format: DBML (Database Markup Language)
// Tool: dbdiagram.io
// 
// Cara penggunaan:
// 1. Buka https://dbdiagram.io/
// 2. Copy-paste seluruh kode ini
// 3. Diagram akan otomatis ter-generate
// ========================================

// ========================================
// PROJECT INFO
// ========================================
Project SistemPeminjamanSarpras {
  database_type: 'PostgreSQL'
  Note: '''
    # Sistem Peminjaman Sarana & Prasarana
    
    Database untuk mengelola peminjaman ruangan 
    dan barang di lingkungan kampus.
    
    **Politeknik Negeri Bandung**
  '''
}

// ========================================
// ENUM DEFINITIONS
// ========================================
Enum role_enum {
  MAHASISWA [note: 'Peminjam ruangan & barang']
  SARPRAS [note: 'Verifikator peminjaman']
  SECURITY [note: 'Pencatat kehadiran']
}

Enum jenis_org_enum {
  HMJ [note: 'Himpunan Mahasiswa Jurusan']
  UKM [note: 'Unit Kegiatan Mahasiswa']
  BEM [note: 'Badan Eksekutif Mahasiswa']
  MPM [note: 'Majelis Permusyawaratan Mahasiswa']
}

Enum peminjaman_status_enum {
  PENDING [note: 'Menunggu verifikasi']
  APPROVED [note: 'Disetujui']
  REJECTED [note: 'Ditolak']
  ONGOING [note: 'Sedang berlangsung']
  FINISHED [note: 'Selesai']
  CANCELLED [note: 'Dibatalkan']
}

Enum notifikasi_status_enum {
  TERKIRIM [note: 'Belum dibaca']
  DIBACA [note: 'Sudah dibaca']
}

Enum notifikasi_jenis_enum {
  PENGAJUAN_DIBUAT [note: 'Notif pengajuan baru']
  STATUS_APPROVED [note: 'Notif disetujui']
  STATUS_REJECTED [note: 'Notif ditolak']
  REMINDER_KEHADIRAN [note: 'Pengingat kehadiran']
}

Enum kehadiran_status_enum {
  HADIR [note: 'Peminjam hadir']
  TIDAK_HADIR [note: 'Peminjam tidak hadir']
  BATAL [note: 'Kegiatan dibatalkan']
}

// ========================================
// TABLE: ORGANISASI
// ========================================
Table organisasi [headercolor: #8b5cf6] {
  kode_organisasi varchar [pk, note: 'Primary Key - Kode unik organisasi']
  nama varchar [not null, note: 'Nama organisasi']
  jenis_organisasi jenis_org_enum [note: 'Jenis: HMJ/UKM/BEM/MPM']
  kontak varchar [note: 'Nomor kontak PIC']
  created_at timestamp [default: `now()`, note: 'Waktu dibuat']
  
  Note: 'Tabel data organisasi mahasiswa'
}

// ========================================
// TABLE: USERS
// ========================================
Table users [headercolor: #3b82f6] {
  kode_user varchar [pk, note: 'Primary Key - Format: USR-YYYYMMDD-XXX']
  nama varchar [not null, note: 'Nama lengkap pengguna']
  email varchar [unique, not null, note: 'Email unik untuk login']
  password_hash varchar [not null, note: 'Hash password (bcrypt)']
  role role_enum [not null, note: 'Role: MAHASISWA/SARPRAS/SECURITY']
  organisasi_kode varchar [ref: > organisasi.kode_organisasi, note: 'FK ke organisasi (nullable)']
  created_at timestamp [default: `now()`, note: 'Waktu registrasi']
  
  Note: 'Tabel data pengguna sistem'
}

// ========================================
// TABLE: RUANGAN
// ========================================
Table ruangan [headercolor: #22c55e] {
  kode_ruangan varchar [pk, note: 'Primary Key - Kode unik ruangan']
  nama_ruangan varchar [not null, note: 'Nama ruangan']
  lokasi varchar [note: 'Lokasi/gedung ruangan']
  kapasitas int [note: 'Kapasitas maksimal orang']
  deskripsi text [note: 'Deskripsi fasilitas ruangan']
  
  Note: 'Tabel data ruangan yang dapat dipinjam'
}

// ========================================
// TABLE: BARANG
// ========================================
Table barang [headercolor: #f97316] {
  kode_barang varchar [pk, note: 'Primary Key - Kode unik barang']
  nama_barang varchar [not null, note: 'Nama barang']
  deskripsi text [note: 'Deskripsi/spesifikasi barang']
  jumlah_total int [not null, note: 'Total stok tersedia']
  ruangan_kode varchar [ref: > ruangan.kode_ruangan, note: 'FK ke ruangan penyimpanan']
  
  Note: 'Tabel data barang inventaris'
}

// ========================================
// TABLE: KEGIATAN
// ========================================
Table kegiatan [headercolor: #06b6d4] {
  kode_kegiatan varchar [pk, note: 'Primary Key - Kode unik kegiatan']
  nama_kegiatan varchar [not null, note: 'Nama kegiatan']
  deskripsi text [note: 'Deskripsi kegiatan']
  tanggal_mulai timestamp [not null, note: 'Tanggal mulai kegiatan']
  tanggal_selesai timestamp [not null, note: 'Tanggal selesai kegiatan']
  organisasi_kode varchar [ref: > organisasi.kode_organisasi, note: 'FK ke organisasi penyelenggara']
  created_at timestamp [default: `now()`]
  updated_at timestamp
  
  Note: 'Tabel data kegiatan organisasi'
}

// ========================================
// TABLE: PEMINJAMAN (CENTRAL)
// ========================================
Table peminjaman [headercolor: #ef4444] {
  kode_peminjaman varchar [pk, note: 'Primary Key - Format: PMJ-YYYYMMDD-XXX']
  kode_user varchar [ref: > users.kode_user, not null, note: 'FK ke user peminjam']
  kode_ruangan varchar [ref: > ruangan.kode_ruangan, note: 'FK ke ruangan (nullable)']
  kode_kegiatan varchar [ref: > kegiatan.kode_kegiatan, note: 'FK ke kegiatan (nullable)']
  tanggal_mulai timestamp [not null, note: 'Tanggal & jam mulai peminjaman']
  tanggal_selesai timestamp [not null, note: 'Tanggal & jam selesai peminjaman']
  keperluan text [not null, note: 'Keperluan/tujuan peminjaman']
  status peminjaman_status_enum [default: 'PENDING', note: 'Status peminjaman']
  path_surat_digital text [note: 'Path file surat digital di storage']
  verified_by varchar [ref: > users.kode_user, note: 'FK ke user verifikator']
  verified_at timestamp [note: 'Waktu verifikasi']
  catatan_verifikasi text [note: 'Catatan dari verifikator']
  created_at timestamp [default: `now()`, note: 'Waktu pengajuan']
  updated_at timestamp [note: 'Waktu update terakhir']
  
  Note: '''
    Tabel utama peminjaman
    - Menyimpan data pengajuan peminjaman ruangan
    - Status: PENDING -> APPROVED/REJECTED -> ONGOING -> FINISHED
  '''
}

// ========================================
// TABLE: PEMINJAMAN_BARANG (JUNCTION)
// ========================================
Table peminjaman_barang [headercolor: #ec4899] {
  kode_peminjaman_barang varchar [pk, note: 'Primary Key']
  kode_peminjaman varchar [ref: > peminjaman.kode_peminjaman, not null, note: 'FK ke peminjaman']
  kode_barang varchar [ref: > barang.kode_barang, not null, note: 'FK ke barang']
  jumlah int [not null, note: 'Jumlah barang yang dipinjam']
  
  Note: 'Tabel junction - detail barang per peminjaman'
}

// ========================================
// TABLE: KEHADIRAN_PEMINJAM
// ========================================
Table kehadiran_peminjam [headercolor: #eab308] {
  kode_kehadiran varchar [pk, note: 'Primary Key']
  kode_peminjaman varchar [ref: > peminjaman.kode_peminjaman, not null, note: 'FK ke peminjaman']
  status_kehadiran kehadiran_status_enum [not null, note: 'Status: HADIR/TIDAK_HADIR/BATAL']
  waktu_konfirmasi timestamp [default: `now()`, note: 'Waktu konfirmasi kehadiran']
  keterangan text [note: 'Catatan kehadiran']
  diverifikasi_oleh varchar [ref: > users.kode_user, note: 'FK ke security yg memverifikasi']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  Note: 'Tabel pencatatan kehadiran peminjam'
}

// ========================================
// TABLE: NOTIFIKASI
// ========================================
Table notifikasi [headercolor: #14b8a6] {
  kode_notifikasi varchar [pk, note: 'Primary Key']
  kode_user varchar [ref: > users.kode_user, not null, note: 'FK ke user penerima']
  kode_peminjaman varchar [ref: > peminjaman.kode_peminjaman, note: 'FK ke peminjaman terkait']
  jenis_notifikasi notifikasi_jenis_enum [not null, note: 'Jenis notifikasi']
  pesan text [not null, note: 'Isi pesan notifikasi']
  status notifikasi_status_enum [default: 'TERKIRIM', note: 'Status: TERKIRIM/DIBACA']
  created_at timestamp [default: `now()`]
  updated_at timestamp
  
  Note: 'Tabel notifikasi pengguna'
}

// ========================================
// TABLE: LOG_AKTIVITAS
// ========================================
Table log_aktivitas [headercolor: #64748b] {
  kode_log varchar [pk, note: 'Primary Key']
  kode_user varchar [ref: > users.kode_user, note: 'FK ke user pelaku (nullable)']
  kode_peminjaman varchar [ref: > peminjaman.kode_peminjaman, note: 'FK ke peminjaman terkait']
  aksi varchar [not null, note: 'Jenis aksi: CREATE/UPDATE/DELETE/VERIFY']
  keterangan text [note: 'Detail keterangan aksi']
  waktu timestamp [default: `now()`, note: 'Waktu aksi']
  updated_at timestamp
  
  Note: 'Tabel audit trail aktivitas sistem'
}

// ========================================
// TABLE GROUPS (untuk visualisasi)
// ========================================
TableGroup master_data {
  organisasi
  ruangan
  barang
  kegiatan
}

TableGroup transaksi {
  peminjaman
  peminjaman_barang
  kehadiran_peminjam
}

TableGroup supporting {
  users
  notifikasi
  log_aktivitas
}
